# Linux-gstreamer-rtspserversink

./: .gitignore  PLAN.md  README.md  meson.build
docs/: rtsp-frame-wobble-validation.md
plugin/: gstrtspsinkplugin.c  meson.build
scripts/: rtsp-wobble-repro.sh
src/: gstrtspsink.c  gstrtspsink.h  meson.build  rtspsink-server.h
src/core/: buffer-model.c  buffer-model.h  h264-pay.c  h264-pay.h  h265-pay.c  h265-pay.h  rtp-relay.c  rtsp-client.c  rtsp-config.c  rtsp-parser.c  rtsp-parser.h  rtsp-router.c  rtsp-router.h  rtsp-server-internal.h  rtsp-server.c  sdp-builder.c  sdp-builder.h
